...

                    <RadioGroup
                        android:id="@+id/radio_group1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
...

                        <RadioButton
                            android:id="@+id/_1opt4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/color_white"
                            android:text="Quite Overwhelmed"
                            android:textColor="@color/color_white" />

...

                    <RadioGroup
                        android:id="@+id/radio_group2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
...
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/color_white"
                            android:text="Not At All Valued"
                            android:textColor="@color/color_white" />

...

                        <RadioButton
                            android:id="@+id/_2opt4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/color_white"
                            android:text="Quite Valued"
                            android:textColor="@color/color_white" />

...

                    <RadioGroup
                        android:id="@+id/radio_group3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <RadioButton
                            android:id="@+id/_3opt1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                    <RadioGroup
                        android:id="@+id/radio_group4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
...

                        <RadioButton
                            android:id="@+id/_4opt4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/color_white"
                            android:text="No"
                            android:textColor="@color/color_white" />

                        <RadioButton
                            android:id="@+id/_4opt5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/color_white"
                            android:text="Not At All"
                            android:textColor="@color/color_white" />

...

                    <RadioGroup
                        android:id="@+id/radio_group5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
...
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/color_white"
                            android:text="Several Days"
                            android:textColor="@color/color_white" />

                        <RadioButton
                            android:id="@+id/_5opt3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/color_white"
                            android:text="More Than Half The Days"
                            android:textColor="@color/color_white" />

...

                    <RadioGroup
                        android:id="@+id/radio_group6"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <RadioButton
                            android:id="@+id/_6opt1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                    <RadioGroup
                        android:id="@+id/radio_group7"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
...

                        <RadioButton
                            android:id="@+id/_7opt2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                    <RadioGroup
                        android:id="@+id/radio_group8"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
...

                        <RadioButton
                            android:id="@+id/_8opt2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                    <RadioGroup
                        android:id="@+id/radio_group9"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
...

                        <RadioButton
                            android:id="@+id/_9opt2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                    <Button
                        android:id="@+id/btn_save_survey"
                        android:layout_marginTop="20dp"
                        android:layout_width="match_parent"
...
                        android:backgroundTint="@color/color_1"
                        android:textColor="@color/color_white"
                        android:text="Save Survey" />
                </LinearLayout>
            </com.amar.library.ui.StickyScrollView>
...
