...
                    android:id="@+id/txtChannelNameSettings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="100"
                    android:fontFamily="sans-serif"
                    android:text="Survey Settings"
                    android:textColor="@color/color_white"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/btn_info_dialog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/color_1"
                    android:src="@drawable/ic_baseline_info_24"
                    android:text="@string/btnDateSelect"
                    android:tint="@color/color_white" />
            </LinearLayout>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/toggle_survey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/content_layout_backg"
                android:checked="true"
                android:padding="10dp"
...
                android:textColor="@color/color_white"
                android:textSize="20dp"
                android:thumb="@drawable/thumb_switch"
                app:track="@drawable/new_switch" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/toggle_public"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/content_layout_backg"
                android:checked="false"
                android:padding="10dp"
...
                android:layout_marginTop="30dp"
                android:text="Survey Frequency"
                android:textColor="@color/color_white"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/color_white"
                    android:text="Daily"
                    android:textColor="@color/color_white" />

                <RadioButton
                    android:id="@+id/radioButton4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
                    android:text="Monthly"
                    android:textColor="@color/color_white" />
            </RadioGroup>


            <Button
                android:id="@+id/btn_save_survey_pref"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/color_1"
                android:textColor="@color/color_white"
                android:text="Save Preferences" />


        </LinearLayout>

    </ScrollView>
    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/survey_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|end"
        app:fab_addButtonColorNormal="@color/color_1"
        app:fab_addButtonColorPressed="@color/color_1"
        app:fab_labelStyle="@style/custom_fab">


        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnAddManual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="@color/color_1"
            app:fab_icon="@drawable/ic_baseline_new_task"
            app:fab_size="mini"
            app:fab_title="Add Manual Survey Entry" />
...
